# TiP-Recomp

./: .gitattributes  .gitignore  CMakeLists.txt  Play.bat  README.md  RegenAndRebuild.bat  retip_config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  patch-mod-request.md
.github/workflows/: build.yml
LinuxScripts/: migrate.sh  play.sh  play_console.sh  rebuild.sh  regen_and_rebuild.sh
Notes/: Notes.ods
WindowsScripts/: Migrate.bat  Play.bat  PlayConsole.bat  Rebuild.bat  RegenAndRebuild.bat
src/: main.cpp  retip_app.h
src/tip_engine/: hooks.cpp  rex_macros.h
src/tip_engine/Overlays/: DebugInfo.h
src/tip_engine/Types/: CommonTypes.h  CursorInstance.h  ModelFormat.h  ReqTypes.h  VivaClassTypes.h
